kubernetes/apps/homepage/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`f9.casa`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: authentik
